deploy/srew-server/srew-server-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: infra

---
apiVersion: v1
kind: Service
metadata:
  name: srew-server
  namespace: infra
spec:
  selector:
    srv: srew-server
  type: ClusterIP
  ports:
  - name: http-80
    port: 80
    targetPort: 80
    protocol: TCP


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srew-server
  namespace: infra
  labels:
    app: srew-server
    version: 0.0.1
spec:
  selector:
    matchLabels:
      srv: srew-server
  template:
    metadata:
      labels:
        srv: srew-server
    spec:
      containers:
      - name: srew-server
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        readinessProbe:
          httpGet:
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
        image: bryantrh/srew-server:0.1.0-6691195
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
        - name: ndots
          value: "2"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  srew-server
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: srew-server.example.cn
      http:
          paths:
            - backend:
                service:
                  name: srew-server
                  port:
                    number: 80
              path: /
              pathType: Prefix
  # tls:
  #     - hosts:
  #       - cm-server.example.cn
  #       secretName: nginx-tls
